--- a/src/components/the_system/ the-belt/TheBelt.css
+++ b/src/components/the_system/ the-belt/TheBelt.css
@@ -1,28 +1,3 @@
 .the-belt {
-    animation: spin 360s linear infinite;
-}
-
-@-moz-keyframes spin {
-    from {
-        -moz-transform: rotate(0deg);
-    }
-    to {
-        -moz-transform: rotate(-360deg);
-    }
-}
-@-webkit-keyframes spin {
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(-360deg);
-    }
-}
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(-360deg);
-    }
+    animation: orbit 360s linear infinite;
 }
