--- a/src/components/the_system/TheSystem.css
+++ b/src/components/the_system/TheSystem.css
@@ -9,3 +9,28 @@
     border-radius: 50%;
     position: absolute;
 }
+
+@-moz-keyframes orbit {
+    from {
+        -moz-transform: rotate(0deg);
+    }
+    to {
+        -moz-transform: rotate(-360deg);
+    }
+}
+@-webkit-keyframes orbit {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(-360deg);
+    }
+}
+@keyframes orbit {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(-360deg);
+    }
+}
