Added moons and second belt layer.
Added moons and the ability for celestial bodies to instantiate themselves for moons/satellites.

Added a second layer to the belt that moves at a different speed.

--- a/src/components/the_system/ the-belt/TheBelt.css
+++ b/src/components/the_system/ the-belt/TheBelt.css
@@ -1,3 +1,9 @@
-.the-belt {
-    animation: orbit 360s linear infinite;
+.the-belt-1st-layer {
+    animation: orbit 300s linear infinite;
+    position: absolute;
+}
+
+.the-belt-2nd-layer {
+    animation: orbit 500s linear infinite;
+    position: absolute;
 }
