Added moons to jupiter and adjusted multipliers to suit

--- a/src/components/the_system/celestial-bodies/Planets.scss
+++ b/src/components/the_system/celestial-bodies/Planets.scss
@@ -10,7 +10,11 @@
     background-color: aqua;
 }
 
-.moon {
+.moon,
+.io,
+.europa,
+.ganymede,
+.callisto {
     background-color: whitesmoke;
 }
 
