Added loading screen and saturns moons

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Kaushan+Script");
-
 .the-system-app-title {
     color: white;
     font-family: "Kaushan Script", cursive;
-    font-size: 1.2vw;
+    font-size: 4ex;
     left: 2vw;
     position: fixed;
     top: 2vh;
     z-index: 2;
+
+    .is-hidden {
+        transition: opacity 2.5s linear;
+        opacity: 0;
+    }
+}
+
+.the-system-is-loading-bg {
+    background-color: #050608;
+    height: 100vh;
+    width: 100vw;
 }
