--- a/src/components/the_system/TheSystem.scss
+++ b/src/components/the_system/TheSystem.scss
@@ -3,9 +3,9 @@
 }
 
 .star {
-    background-color: rgb(255, 255, 255);
     border-radius: 50%;
     position: absolute;
+    transition: opacity 3s;
 }
 
 @-moz-keyframes orbit {
@@ -30,5 +30,14 @@
     }
     to {
         transform: rotate(-360deg);
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
