Fixed Saturn's size, changed font, added netlify badge

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Kaushan+Script");
+@import url("https://fonts.googleapis.com/css?family=Raleway");
 .the-system-app-title {
     color: white;
-    font-family: "Kaushan Script", cursive;
+    font-family: "Raleway", sans-serif;
     font-size: 3ex;
     left: 2vw;
     position: fixed;
