--- a/src/components/nav_menu/NavMenu.scss
+++ b/src/components/nav_menu/NavMenu.scss
@@ -1,6 +1,6 @@
 .the-system-nav {
     color: white;
-    font-family: "Kaushan Script", cursive;
+    font-family: "Raleway", sans-serif;
     position: fixed;
     right: 2vw;
     top: 2vh;
