--- a/src/components/nav_menu/NavMenu.scss
+++ b/src/components/nav_menu/NavMenu.scss
@@ -20,8 +20,8 @@
     }
 
     .the-system-nav-dropdown {
-        left: 58px;
-        margin: 3px 6px 0 -6px;
+        left: 3vw;
+        margin: 3px 6px;
         padding: 3px;
         position: absolute;
         transition: transform 1s;
