Further fixes to the navbar and did jupiter assets.

--- a/src/components/the_system/celestial-bodies/Planets.scss
+++ b/src/components/the_system/celestial-bodies/Planets.scss
@@ -10,11 +10,7 @@
     background-color: aqua;
 }
 
-.moon,
-.io,
-.europa,
-.ganymede,
-.callisto {
+.moon {
     background-color: whitesmoke;
 }
 
