--- a/src/components/the_system/TheSystem.scss
+++ b/src/components/the_system/TheSystem.scss
@@ -13,7 +13,7 @@
         -moz-transform: rotate(0deg);
     }
     to {
-        -moz-transform: rotate(-360deg);
+        -moz-transform: rotate(-359deg);
     }
 }
 @-webkit-keyframes orbit {
@@ -21,7 +21,7 @@
         -webkit-transform: rotate(0deg);
     }
     to {
-        -webkit-transform: rotate(-360deg);
+        -webkit-transform: rotate(-359deg);
     }
 }
 @keyframes orbit {
@@ -29,7 +29,32 @@
         transform: rotate(0deg);
     }
     to {
-        transform: rotate(-360deg);
+        transform: rotate(-359deg);
+    }
+}
+
+@-moz-keyframes planet-rotation {
+    from {
+        -moz-transform: rotate(0deg);
+    }
+    to {
+        -moz-transform: rotate(359deg);
+    }
+}
+@-webkit-keyframes planet-rotation {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(359deg);
+    }
+}
+@keyframes planet-rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
     }
 }
 
