--- a/src/components/the_system/celestial-bodies/jupiter/Jupiter.scss
+++ b/src/components/the_system/celestial-bodies/jupiter/Jupiter.scss
@@ -1,8 +1,8 @@
 .jupiter {
     background-image: url("./assets/Jupiter.svg");
-    background-position: right center;
+    background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     transform: rotate(5deg);
 }
 
