Some cleanup and work on making initial render smoother

--- a/src/components/the_system/celestial-bodies/Planets.scss
+++ b/src/components/the_system/celestial-bodies/Planets.scss
@@ -1,13 +1,13 @@
 .mercury {
-    background-color: red;
+    background-color: #aba49a;
 }
 
 .venus {
-    background-color: yellowgreen;
+    background-color: #c5aa75;
 }
 
 .earth {
-    background-color: aqua;
+    background-color: #4a83a0;
 }
 
 .moon {
@@ -15,7 +15,7 @@
 }
 
 .mars {
-    background-color: orangered;
+    background-color: #ca5202;
 }
 
 .uranus {
