--- a/src/components/nav_menu/NavMenu.scss
+++ b/src/components/nav_menu/NavMenu.scss
@@ -1,4 +1,5 @@
 .the-system-nav {
+    animation: fadeIn 2s linear;
     color: white;
     font-family: "Raleway", sans-serif;
     position: fixed;
@@ -43,5 +44,14 @@
                 cursor: pointer;
             }
         }
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
