--- a/src/components/the-system/TheSystem.scss
+++ b/src/components/the-system/TheSystem.scss
@@ -1,11 +1,5 @@
 .the-system {
-    background: radial-gradient(ellipse at center, #1c2837 0%, #050608 100%);
-}
-
-.star {
-    border-radius: 50%;
-    position: absolute;
-    transition: opacity 3s;
+    background: url("./assets/stars-background.png") 50% repeat;
 }
 
 @-moz-keyframes orbit {
