--- a/src/components/the-system/ the-belt/TheBelt.scss
+++ b/src/components/the-system/ the-belt/TheBelt.scss
@@ -1,9 +1,3 @@
-.the-belt-1st-layer {
-    animation: orbit 300s linear infinite;
-    position: absolute;
-}
-
-.the-belt-2nd-layer {
-    animation: orbit 500s linear infinite;
+.the-belt-layer {
     position: absolute;
 }
