--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
 
 .orbits-visible {
     .orbit {
-        border: 1px solid rgba(255, 0, 0, 0.5);
+        border-color: rgba(255, 0, 0, 0.5);
 
         &.sun-orbit {
             border: none;
