--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 
 .the-system-app-title {
     color: white;
+    cursor: default;
     font-family: "Raleway", sans-serif;
     font-size: 3ex;
     left: 2vw;
