--- a/src/components/the-system/celestial-bodies/bodies/CelestialBody.module.scss
+++ b/src/components/the-system/celestial-bodies/bodies/CelestialBody.module.scss
@@ -5,7 +5,7 @@
     position: absolute;
 }
 
-.celestial-body {
+.celestialBody {
     border-radius: 50%;
     min-height: 1px;
     min-width: 1px;
