--- a/src/components/the-system/celestial-bodies/sun/Sun.module.scss
+++ b/src/components/the-system/celestial-bodies/sun/Sun.module.scss
@@ -1,9 +1,3 @@
 .sun {
-    background: radial-gradient(
-        ellipse at center,
-        #ffd000 1%,
-        #f9b700 39%,
-        #f9b700 39%,
-        #e06317 100%
-    );
+  background: radial-gradient(ellipse at center, #ffd000 1%, #f9b700 39%, #f9b700 39%, #e06317 100%);
 }
