Cleaned up the nav menu, added docs on components and props. Removed my eslint config and set up a eslint to run correctly. Ran prettier/linting over everything.

--- a/src/components/system-nav-menu/sub-menus/PointsOfInterestButton.module.scss
+++ b/src/components/system-nav-menu/sub-menus/PointsOfInterestButton.module.scss
@@ -1,4 +1,5 @@
 .navItem {
+  composes: button from '../CommonStyles.module.scss';
   display: inline-block;
   font-size: 1.2em;
   padding-left: 10px;
