--- a/src/components/the-system/TheSystem.module.scss
+++ b/src/components/the-system/TheSystem.module.scss
@@ -1,5 +1,5 @@
 .theSystem {
-  background: url("./assets/stars-background.png") 50% repeat;
+  background: url('./assets/stars-background.png') 50% repeat;
   position: relative;
 }
 
