--- a/src/components/the-system/celestial-bodies/jupiter/Jupiter.module.scss
+++ b/src/components/the-system/celestial-bodies/jupiter/Jupiter.module.scss
@@ -1,5 +1,5 @@
 .jupiter {
-  background-image: url("./assets/Jupiter.svg");
+  background-image: url('./assets/Jupiter.svg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
