--- a/src/components/the-system/celestial-bodies/saturn/Saturn.module.scss
+++ b/src/components/the-system/celestial-bodies/saturn/Saturn.module.scss
@@ -1,5 +1,5 @@
 .saturn {
-  background-image: url("./assets/Saturn.svg");
+  background-image: url('./assets/Saturn.svg');
   background-position: right center;
   background-repeat: no-repeat;
   background-size: contain;
