--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway");
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 
 .title {
   color: white;
   cursor: default;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 3ex;
   left: 2vw;
   position: fixed;
