--- a/src/components/system-nav-menu/nav-menu/NavMenu.module.scss
+++ b/src/components/system-nav-menu/nav-menu/NavMenu.module.scss
@@ -1,32 +1,33 @@
 .nav {
   color: white;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   position: fixed;
   right: 2vw;
   text-align: right;
   top: 2vh;
   z-index: 2;
+}
 
-  .headerButton {
-    font-size: 1.8em;
+.headerButton {
+  composes: button from '../CommonStyles.module.scss';
+  font-size: 1.8em;
+}
+
+.menu {
+  left: 10vw;
+  overflow-y: scroll;
+  position: absolute;
+  transition: transform 0.6s;
+
+  .menuItemSubheader {
+    display: inline-block;
+    font-size: 1.5em;
+    font-weight: bolder;
   }
 
-  .menu {
-    left: 10vw;
-    overflow-y: scroll;
-    position: absolute;
-    transition: transform 0.6s;
-
-    .menuItemSubheader {
-      display: inline-block;
-      font-size: 1.5em;
-      font-weight: bolder;
-    }
-
-    .menuItemBody {
-      overflow-y: hidden;
-      transition: max-height 0.6s linear;
-    }
+  .menuItemBody {
+    overflow-y: hidden;
+    transition: max-height 0.6s linear;
   }
 }
 
