--- a/src/components/the-system/celestial-bodies/neptune/Neptune.module.scss
+++ b/src/components/the-system/celestial-bodies/neptune/Neptune.module.scss
@@ -1,5 +1,5 @@
 .neptune {
-  background-image: url("./assets/Neptune.svg");
+  background-image: url('./assets/Neptune.svg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
