--- a/src/components/nav-menu/NavMenu.module.scss
+++ b/src/components/nav-menu/NavMenu.module.scss
@@ -9,7 +9,7 @@
 }
 
 .headerButton {
-  composes: button from '../CommonStyles.module.scss';
+  composes: button from './CommonStyles.module.scss';
   font-size: 1.8em;
 }
 
@@ -18,17 +18,6 @@
   overflow-y: scroll;
   position: absolute;
   transition: transform 0.6s;
-
-  .menuItemSubheader {
-    display: inline-block;
-    font-size: 1.5em;
-    font-weight: bolder;
-  }
-
-  .menuItemBody {
-    overflow-y: hidden;
-    transition: max-height 0.6s linear;
-  }
 }
 
 @keyframes fadeIn {
