--- a/src/components/nav-menu/sub-menus/PointOfInterestButton.module.scss
+++ b/src/components/nav-menu/sub-menus/PointOfInterestButton.module.scss
@@ -2,7 +2,8 @@
   composes: button from '../CommonStyles.module.scss';
   display: inline-block;
   font-size: 1.2em;
-  padding-left: 10px;
+  margin: 0 2px 2px 0;
+  padding: 0 2px;
 }
 
 .navItemFollowed {
