--- a/src/components/notifications/NotificationsList.module.scss
+++ b/src/components/notifications/NotificationsList.module.scss
@@ -1,16 +1,25 @@
+.container {
+  display: flex;
+  flex-direction: column-reverse;
+  position: fixed;
+  align-items: center;
+  bottom: 0;
+  left: 0;
+  height: calc(100vh - 50px);
+  width: 20vw;
+}
+
 .notification {
   position: relative;
   border-radius: 5px;
   display: flex;
-  flex-direction: column;
-  margin-top: 8px;
-  overflow: hidden;
-}
-
-.content {
-  display: flex;
   flex-direction: row;
   padding: 8px;
+  margin-top: 8px;
+}
+
+.messageList {
+  padding-inline-start: 1em;
 }
 
 .info {
