--- a/src/components/notifications/NotificationView.module.scss
+++ b/src/components/notifications/NotificationView.module.scss
@@ -5,26 +5,27 @@
   flex-direction: column;
   margin-top: 8px;
   overflow: hidden;
+  color: #fefefe;
 }
 
 .content {
   display: flex;
   flex-direction: row;
-  padding: 8px;
+  padding: 12px;
 }
 
 .info {
-  background-color: rgb(115, 178, 199);
+  background-color: rgb(33, 150, 243);
 }
 
 .success {
-  background-color: rgb(133, 221, 133);
+  background-color: rgb(65, 165, 68);
 }
 
 .warning {
-  background-color: rgb(247, 168, 132);
+  background-color: rgb(255, 152, 0);
 }
 
 .error {
-  background-color: rgb(253, 127, 127);
+  background-color: rgb(230, 59, 46);
 }
