Various cleanup from running sonar cloud

--- a/src/components/the-system/celestial-body/CelestialBody.module.scss
+++ b/src/components/the-system/celestial-body/CelestialBody.module.scss
@@ -10,6 +10,5 @@
   min-height: 1px;
   min-width: 1px;
   position: relative;
-  transition-property: all;
-  transition: linear;
+  transition: all linear;
 }
