Move interactive elements to buttons

--- a/src/components/nav-menu/CommonStyles.module.scss
+++ b/src/components/nav-menu/CommonStyles.module.scss
@@ -1,6 +1,11 @@
 .button {
-  &:hover {
+  display: block;
+  background-color: transparent;
+  border: none;
+  color: white;
+
+  &:hover,
+  &:focus {
     color: lightblue;
-    cursor: pointer;
   }
 }
