--- a/src/components/nav-menu/sub-menus/InfoMenu.module.scss
+++ b/src/components/nav-menu/sub-menus/InfoMenu.module.scss
@@ -17,8 +17,11 @@
   border-radius: 3px;
   display: inline-block;
   padding: 1px 3px;
+  background-color: transparent;
+  color: white;
 
-  &:hover {
+  &:hover,
+  &:active {
     background-color: rgba(100, 100, 100, 0.3);
     color: rgb(173, 216, 230);
     cursor: pointer;
